--- a/Projecte-1/Capa-Persistència/nbproject/project.properties
+++ b/Projecte-1/Capa-Persistència/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Capa-Persist_ncia
 excludes=
 file.reference.ojdbc8_21.3.jar=D:\\DAM\\DAM2\\Acces a Dades\\Oracle\\ojdbc8_21.3.jar
+file.reference.ojdbc8_21.3.jar-1=D:\\DAM\\DAM2\\Acces a Dades\\Oracle\\Nueva carpeta\\ojdbc8_21.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.Capa_Model.jar}:\
-    ${file.reference.ojdbc8_21.3.jar}
+    ${file.reference.ojdbc8_21.3.jar}:\
+    ${file.reference.ojdbc8_21.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
