--- a/Projecte-1/Capa_Vista/nbproject/private/private.properties
+++ b/Projecte-1/Capa_Vista/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.ojdbc8_21.3.jar=D:\\DAM\\DAM2\\Acces a Dades\\Oracle\\Nueva carpeta\\ojdbc8_21.3.jar
 user.properties.file=C:\\Users\\gerar\\AppData\\Roaming\\NetBeans\\14\\build.properties
