--- a/Projecte-1/Capa-Persistència/nbproject/project.properties
+++ b/Projecte-1/Capa-Persistència/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Capa-Persist\u00e8ncia
+application.vendor=gerar
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/Capa-Persist_ncia.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Capa-Persist_ncia
+endorsed.classpath=
 excludes=
 file.reference.ojdbc8_21.3.jar=D:\\DAM\\DAM2\\Acces a Dades\\Oracle\\ojdbc8_21.3.jar
 file.reference.ojdbc8_21.3.jar-1=D:\\DAM\\DAM2\\Acces a Dades\\Oracle\\Nueva carpeta\\ojdbc8_21.3.jar
@@ -39,8 +41,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.Capa_Model.jar}:\
-    ${file.reference.ojdbc8_21.3.jar}:\
-    ${file.reference.ojdbc8_21.3.jar-1}
+    ${file.reference.ojdbc8_21.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
