--- a/Projecte-1/Capa-Persistència/nbproject/private/private.properties
+++ b/Projecte-1/Capa-Persistència/nbproject/private/private.properties
@@ -1,2 +1,9 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.ojdbc8_21.3.jar=D:\\DAM\\DAM2\\Acces a Dades\\Oracle\\Nueva carpeta\\ojdbc8_21.3.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\gerar\\AppData\\Roaming\\NetBeans\\14\\build.properties
