--- a/Projecte-1/Capa_Vista/nbproject/project.properties
+++ b/Projecte-1/Capa_Vista/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Capa_Vista
+application.vendor=isard
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,11 +33,12 @@ dist.jar=${dist.dir}/Capa_Vista.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Capa_Vista
+endorsed.classpath=
 excludes=
 file.reference.ojdbc8_21.3.jar=D:\\DAM\\DAM2\\Acces a Dades\\Oracle\\ojdbc8_21.3.jar
 file.reference.ojdbc8_21.3.jar-1=D:\\DAM\\DAM2\\Acces a Dades\\Oracle\\Nueva carpeta\\ojdbc8_21.3.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${reference.Capa_Model.jar}:\
     ${file.reference.ojdbc8_21.3.jar}:\
@@ -44,7 +46,7 @@ javac.classpath=\
     ${file.reference.ojdbc8_21.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
