--- a/Projecte-1/Capa_Vista/nbproject/private/private.properties
+++ b/Projecte-1/Capa_Vista/nbproject/private/private.properties
@@ -1,4 +1,10 @@
 compile.on.save=true
+do.depend=true
+do.jar=true
+do.jlink=false
 file.reference.ojdbc8_21.3.jar=C:\\Users\\isard\\Desktop\\T7\\SpotyMila\\Projecte-1\\ojdbc8_21.3.jar
 file.reference.ojdbc8_21.3.jar-1=C:\\Users\\isard\\Desktop\\T7\\SpotyMila\\Projecte-1\\ojdbc8_21.3.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\isard\\AppData\\Roaming\\NetBeans\\dev\\build.properties
