--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Projecte-1/Capa_Model/dist/
 /Projecte-1/Capa-Persistència/dist/
 /Projecte-1/Capa_Vista/dist/
+/Projecte-1/Capa_Model/build/
+/Projecte-1/Capa-Persistència/build/
