--- a/Projecte-1/Capa_Vista/nbproject/private/private.properties
+++ b/Projecte-1/Capa_Vista/nbproject/private/private.properties
@@ -2,8 +2,8 @@ compile.on.save=true
 do.depend=true
 do.jar=true
 do.jlink=false
-file.reference.ojdbc8_21.3.jar=C:\\Users\\isard\\Desktop\\T7\\SpotyMila\\Projecte-1\\ojdbc8_21.3.jar
-file.reference.ojdbc8_21.3.jar-1=C:\\Users\\isard\\Desktop\\T7\\SpotyMila\\Projecte-1\\ojdbc8_21.3.jar
+file.reference.ojdbc8_21.3.jar=C:\\Users\\isard\\Desktop\\Projecte productes\\SpotyMila\\Projecte-1\\ojdbc8_21.3.jar
+file.reference.ojdbc8_21.3.jar-1=C:\\Users\\isard\\Desktop\\Projecte productes\\SpotyMila\\Projecte-1\\ojdbc8_21.3.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
